@@ -7,6 +7,9 @@ Changes in 1.1.24:
       have been added to facilitate mirroring metadata.
       addMetadataItems() has been added to allow metadata to be added
       to a trove after it has been built. (CNY-1577)
+    * Conary now supports files whose compressed contents are more than
+      4 gig in size. Old versions of Conary will report an error saying
+      that "assert(subMagic == SUBFILE_MAGIC)" failed (CNY-1572).
 
   o Client Changes:
     * The Conary client now distinguishes between an upstream Conary
